# university-sdi-project

./: .gitignore  CMakeLists.txt  README.md  trekstar-documentation.tex
data/: data.json  deadpool.txt  saveData.json
documentation/: references.bib  trekstar-documentation.md  trekstar-documentation.tex
documentation/get-started/: setup-pandoc.md  setup-pandoc.tex
logs/: changes_2019-04-23.txt  changes_2019-04-24.txt  changes_2019-04-25.txt  changes_2019-04-26.txt  changes_2019-04-27.txt
src/: CMakeLists.txt  Controller.h  Model.h  addInformation.cpp  listInformation.cpp  main.cpp  pch.h  saveInformation.cpp  trekstar.cpp
src/GUI/: TrekstarProjectsModel.qml  backend.cpp  backend.h  main.qml  qml.qrc
src/algorithms/: BinarySearch.cpp  BinarySearch.h  LinearSearch.cpp  LinearSearch.h  MergeSort.cpp  MergeSort.h
src/command/: CommandHandler.cpp  CommandHandler.h  maintainenceMode.cpp  maintainenceMode.h  maintenanceMode.cpp  maintenanceMode.h  userInput.cpp  userInput.h  viewMode.cpp  viewMode.h
src/controller/: BaseController.cpp  BaseController.h  ControllerInterface.h  ProjectController.h  VHSController.h
src/controller/material/: BoxSetController.cpp  BoxSetController.h  DVDController.cpp  DVDController.h  DoubleSideDVDController.cpp  DoubleSideDVDController.h  MaterialController.cpp  MaterialController.h  VHSController.cpp  VHSController.h
src/controller/people/: CrewController.cpp  CrewController.h
src/controller/project/: BoxOfficeReportController.cpp  BoxOfficeReportController.h  ProjectController.cpp  ProjectController.h
src/file/: fileOperations.cpp  fileOperations.h
src/information/: SequentialBrowser.cpp  SequentialBrowser.h  addInformation.cpp  addInformation.h  listInformation.cpp  listInformation.h  saveInformation.cpp  saveInformation.h  updateInformation.cpp  updateInformation.h
src/material/: Bluray.cpp  Bluray.h  BoxSet.cpp  BoxSet.h  DVD.cpp  DVD.h  DVDSide.cpp  DVDSide.h  DoubleSideDVD.cpp  DoubleSideDVD.h  Material.cpp  Material.h  MaterialFactory.cpp  MaterialFactory.h  MaterialPresenter.cpp  MaterialPresenter.h  SingleSideDVD.cpp  SingleSideDVD.h  VHS.h
src/material/Bluray/: Bluray.cpp  Bluray.h
src/material/BoxSet/: BoxSet.cpp  BoxSet.h
src/material/DVD/: DVD.h
src/material/DVDSide/: DVDSide.cpp  DVDSide.h
src/material/DoubleSideDVD/: DoubleSideDVD.h
src/material/Material/: Material.h
src/material/MaterialFactory/: MaterialFactory.cpp  MaterialFactory.h
src/material/VHS/: VHS.cpp  VHS.h  VHSController.cpp  VHSController.h
src/model/: Model.cpp  Model.h
src/model/material/: Bluray.h  BoxSet.cpp  BoxSet.h  DVD.cpp  DVD.h  DVDInterface.h  DVDSide.cpp  DVDSide.h  DoubleSideDVD.cpp  DoubleSideDVD.h  DoubleSideDVDInterface.h  Material.cpp  Material.h  MaterialFactory.cpp  MaterialFactory.h  MaterialInterface.h  VHS.cpp  VHS.h
src/model/people/: Crew.cpp  Crew.h  CrewInterface.h
src/model/project/: BoxOfficeReport.cpp  BoxOfficeReport.h  BoxOfficeReportInterface.h  Project.cpp  Project.h  ProjectInterface.h
src/people/: Crew.cpp  Crew.h
src/project/: DVD.cpp  DVD.h  Material.cpp  Material.h  MaterialFactory.cpp  MaterialFactory.h  Project.cpp  Project.h  ProjectController.cpp  ProjectController.h  ProjectInterface.h  ProjectListView.cpp  ProjectListView.h  ProjectView.h  data.txt
src/structures/: Stack.h
src/view/: BaseView.cpp  BaseView.h  ConsoleMessageView.cpp  ConsoleMessageView.h  ProjectView.h  ViewInterface.h
src/view/material/: BoxSetView.cpp  BoxSetView.h  DVDView.cpp  DVDView.h  DoubleSideDVDView.cpp  DoubleSideDVDView.h  MaterialView.cpp  MaterialView.h  VHSView.cpp  VHSView.h
src/view/people/: CrewView.cpp  CrewView.h
src/view/project/: BoxOfficeReportView.cpp  BoxOfficeReportView.h  ProjectView.cpp  ProjectView.h
tests/: CMakeLists.txt  exampleTest.cpp  tests.cpp
tests/mock/: MockProject.h  MockProjectView.h
tests/tests/: BaseMaterialTest.cpp  BoxOfficeReportTest.cpp  DVDTest.cpp  MaterialTest.cpp  ProjectTest.cpp  StackTest.cpp  TestCase.h
